force-app/main/default/objects/Veteran__c/Veteran__c.object-meta.xml
<CustomObject>
    <description>Object to keep track of user information of Veterans</description>
    <label>Veteran</label>
    <nameField>
        <displayFormat>Vet-{00000000}</displayFormat>
        <label>Veteran Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Veterans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>