force-app/main/default/objects/Veteran__c/fields/Disability_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Disability_Percentage__c</fullName>
    <description>Level of disability that veteran currently is assigned</description>
    <inlineHelpText>If you currently receive disability please enter the percentage</inlineHelpText>
    <label>Disability Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>