force-app/main/default/objects/Veteran__c/fields/Discharge_Status__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Status__c</fullName>
    <description>What type of discharge did the veteran receive</description>
    <inlineHelpText>Please choose the discharge type you received upon leaving service</inlineHelpText>
    <label>Discharge Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Honorable</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Other Than Honorable</fullName>
            </value>
            <value>
                <fullName>Bad Conduct</fullName>
            </value>
            <value>
                <fullName>Dishonorable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>