force-app/main/default/objects/Veteran__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Veteran email</description>
    <inlineHelpText>Please enter your email</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>