force-app/main/default/objects/Veteran__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Veteran First Name</description>
    <inlineHelpText>Please enter your first name</inlineHelpText>
    <label>First Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>