force-app/main/default/objects/Veteran__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Veteran Last Name</description>
    <inlineHelpText>Please enter your last name</inlineHelpText>
    <label>Last Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>