force-app/main/default/objects/Veteran__c/fields/Military_Branch__c.field-meta.xml
<CustomField>
    <fullName>Military_Branch__c</fullName>
    <description>Branch of the military that the veteran served in</description>
    <inlineHelpText>Please choose the branch you have served in</inlineHelpText>
    <label>Military Branch</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Air Force</fullName>
            </value>
            <value>
                <fullName>Army</fullName>
            </value>
            <value>
                <fullName>Coast Guard</fullName>
            </value>
            <value>
                <fullName>Marines</fullName>
            </value>
            <value>
                <fullName>Navy</fullName>
            </value>
            <value>
                <fullName>Space Force</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>