force-app/main/default/objects/Veteran__c/fields/Military_Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Military_Service_End_Date__c</fullName>
    <description>Date that the veteran&apos;s military service ended</description>
    <inlineHelpText>Please choose the date that your military service ended</inlineHelpText>
    <label>Military Service End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>