force-app/main/default/objects/Veteran__c/fields/Military_Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Military_Service_Start_Date__c</fullName>
    <description>Date when the veteran&apos;s military service started</description>
    <inlineHelpText>Please enter the date your military service started</inlineHelpText>
    <label>Military Service Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>