force-app/main/default/objects/Veteran__c/fields/Primary_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone_Number__c</fullName>
    <description>Primary phone number of veteran</description>
    <inlineHelpText>Please enter your primary phone number</inlineHelpText>
    <label>Primary Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>