force-app/main/default/objects/Veteran__c/fields/Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Number__c</fullName>
    <description>Veteran Social Security Number</description>
    <inlineHelpText>Please enter your social security number</inlineHelpText>
    <label>Social Security Number</label>
    <length>9</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>