force-app/main/default/objects/Veteran__c/fields/Veteran_User__c.field-meta.xml
<CustomField>
    <fullName>Veteran_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The veteran user associated with a veteran record</description>
    <label>Veteran User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Veterans</relationshipName>
    <type>Lookup</type>
</CustomField>