force-app/main/default/objects/Veteran__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Military_Branch__c</columns>
    <columns>Disability_Percentage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Veteran_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>